package app;

public class Subscriber {
    private int num;

    public Subscriber(int num) {
        this.num = num;
    }

    public int getNum() {
        return num;
    }
}
