@startuml

title __LIBRARY's Class Diagram__\n

  package exceptions {
    class AlreadyBorrowed {
    }
  }
  

  package exceptions {
    class AlreadyInMailingList {
    }
  }
  

  package exceptions {
    class AlreadyReserved {
    }
  }
  

  package server {
    class App {
    }
  }
  

  package client {
    class App {
    }
  }
  

  package state {
    class Available {
    }
  }
  

  package services {
    class BackService {
    }
  }
  

  package services {
    class BackServiceTest {
    }
  }
  

  package library {
    class Book {
    }
  }
  

  package services {
    class BorrowService {
    }
  }
  

  package services {
    class BorrowServiceTest {
    }
  }
  

  package state {
    class Borrowed {
    }
  }
  

  package library {
    interface Document {
    }
  }
  

  package exceptions {
    class DocumentNotFound {
    }
  }
  

  package server {
    interface Factory {
    }
  }
  

  package services {
    class FactoryServices {
    }
  }
  

  package library {
    class Library {
    }
  }
  

  package exceptions {
    class NotAvailableException {
    }
  }
  

  package server {
    enum PORTS {
    }
  }
  

  package services {
    class ReservationService {
    }
  }
  

  package services {
    class ReservationServiceTest {
    }
  }
  

  package state {
    class Reserved {
    }
  }
  

  package server {
    class Server {
    }
  }
  

  package services {
    abstract class Service {
    }
  }
  

  package state {
    abstract class State {
    }
  }
  

  package exceptions {
    class SubAlreadyExist {
    }
  }
  

  package library {
    class Subscriber {
    }
  }
  

  package exceptions {
    class SubscriberNotFound {
    }
  }
  

  AlreadyBorrowed -up-|> NotAvailableException
  AlreadyReserved -up-|> NotAvailableException
  Available -up-|> State
  BackService -up-|> Service
  Book -up-|> Document
  Book o-- State : state
  Book o-- Subscriber : sub
  BorrowService -up-|> Service
  Borrowed -up-|> State
  FactoryServices -up-|> Factory
  ReservationService -up-|> Service
  Reserved -up-|> State
  Server -up-|> Runnable
  Server o-- PORTS : port
  Server o-- Factory : factory
  Server o-- Library : library
  Service -up-|> Runnable
  Service o-- Library : library


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
